all spacing fixed

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,8 @@
 
 h1 {
   text-align: center;
-  margin-top: .2em;
+  margin-top: 0;
+  margin-bottom: .2em;
 }
 .container {
   display: grid;
@@ -148,6 +149,18 @@ h1.title3 {
   font-family: 'PT Sans Caption', sans-serif;
   color: #AA1854;
   font-size: 45px;
+  padding-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+h1.contact {
+  font-family: 'PT Sans Caption', sans-serif;
+  color: #AA1854;
+  font-size: 45px;
+  padding-top: 0;
+  margin-bottom: 1em;
+  padding-bottom: 0;
 }
 
 a.email {
@@ -156,7 +169,7 @@ a.email {
 }
 
 p.phone {
-  margin-top: 1em;
+  margin-top: 3em;
   font-size: 1.5em;
   color: #AA1854;
   font-family: 'PT Sans Caption', sans-serif;
@@ -248,6 +261,7 @@ a {
     cursor: pointer;
     font-size: .7em;
     padding: .5rem;
+    padding-bottom: 0;
     border: 0;
     transition: all 0.5s;
     border-radius: 10px;
@@ -315,39 +329,35 @@ p.linklogos {
 }
 
 div.links {
-  margin-bottom: 5.5em;
+  margin-top: 3.5em;
+  margin-bottom: 2em;
 }
 
 p.skillssection {
   margin-bottom: 0;
-  padding-bottom: .2em;
+  padding-bottom: .1em;
+
 }
 
 #absoluteJAMS.section-content {
   margin-top: 2em;
   margin: 0 auto;
-  width: 75%;
+  width: 65%;
   align-items: center;
 }
 
-#gigglelibs.section-content {
-  margin-top: 2em;
-  margin: 0 auto;
-  width: 75%;
-  align-items: center;
-}
 
 #yournewmusic.section-content {
   margin-top: 2em;
   margin: 0 auto;
-  width: 75%;
+  width: 65%;
   align-items: center;
 }
 
 #dailypaintracker.section-content {
   margin-top: 2em;
   margin: 0 auto;
-  width: 75%;
+  width: 65%;
   align-items: center;
 }
 
@@ -358,11 +368,36 @@ p.skillssection {
   align-items: center;
 }
 
+#gigglelibs.section-content {
+  margin-top: 2em;
+  margin: 0 auto;
+  width: 65%;
+  align-items: center;
+}
+
+#chicagotowfind.section-content {
+  margin-top: 2em;
+  margin: 0 auto;
+  width: 65%;
+  align-items: center;
+}
 
 #education.section-content {
   margin-top: 0;
 
 }
+
+
+
+img.paintrackerss {
+  padding-right: 2em;
+}
+
+img.paintrackerss2 {
+  padding-bottom: 2.5em;
+}
+
+
 
 p.education {
   margin-top: 0;
@@ -380,14 +415,17 @@ p.backtotop {
   float: left;
   width: 33.33%;
   text-align: justify;
- 
   margin: 0 auto;
+  padding-bottom: 0;
 }
 
 .descriptionitems {
-  width: 50%;
-  margin-left: 7em;
+  width: 75%;
+  margin-left: 9em;
 }
+
+
+
 
 .sitedescription:after {
   content: "";
@@ -397,25 +435,50 @@ p.backtotop {
 
 p.features {
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
+  padding-left: 9em;
   padding-bottom: .5em;
+  font-weight: bold;
 }
 
 div.absolutescreenshots {
   display: inline-block;
-  align-items: center;
+  align-content: center;
+  margin: 0 auto;
 }
 
 img.absoluteshots {
-  padding-right: 5em;
+  padding-right: 0;
 }
 
 div.demolinks {
   margin: 0 auto;
 }
 
+img.skills {
+  margin-top: 4em;
+}
+
+img.contact {
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+img.jams {
+  padding-top: 0;
+}
+
+img.githubrepos {
+  margin-left: 5px;
+}
+
 p.link {
   margin-top: 0;
+}
+
+div.sitedescription {
+  color: black;
+  font-size: 12px;
 }
 
 .profilepic {
